fixed problem on safari/chrome h1

--- a/styles/header/_startpicture.scss
+++ b/styles/header/_startpicture.scss
@@ -88,7 +88,7 @@
 
   &.join {
     align-items: flex-end;
-    justify-content: flex-end;
+    justify-content: flex-start;
 
     background-image: linear-gradient(to top, #c15555c7, #240202dc),
       url("../../pictures/page-3/hero-3.jpg");
